--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Newsletter</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Roboto" />
+
   </head>
   <body>
 
@@ -31,15 +33,15 @@
             </div>
           </div>
 
-          <div class="form">
+          <form>
             <label for="fEmail">Email address</label><br>
-            <input type="email" name="email" id="">
+            <input type="email" name="email" id>
             <input type="submit" value="Subscribe to monthly newsletter">
-          </div>
+          </form>
         </div>
-        
+
         <div class="right">
-          <img src="./assets/images/illustration-sign-up-desktop.svg" alt="">
+          <img src="./assets/images/illustration-sign-up-desktop.svg" alt>
         </div>
       </div>
 
